--- a/index.html
+++ b/index.html
@@ -4,123 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressão - Paper Shark</title>
+
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/wallpaper.css">
+    <link rel="stylesheet" href="/css/right_column.css">
 </head>
 <body>
     <!-- Imagem de fundo -->
-    <div>
+    <div class="wallpaper">
         <!-- Container do QR Code e do link de mais informações -->
-        <div>
+        <div class="top">
             <!-- QR Code do Pix -->
-            <img src="" alt="">
+            <img class="top__qrcode" src="/img/qr-code.png" alt="">
 
             <!-- Link de informações -->
-             <a href="">
+             <a class="information" href="">
                 <!-- Imagem de informações -->
-                <img src="" alt="">
+                <img class="information__image" src="/img/information.png" alt="informações">
              </a>
         </div>
 
         <!-- Logo da focus consultoria -->
-        <img src="" alt="">
+        <img class="wallpaper__bottom" src="/img/focus-logo.png" alt="logo da focus">
     </div>
 
     <!-- Coluna lateral -->
-    <div>
+    <div class="right_column">
         <!-- Container do forms e das abas do sistema -->
-        <div>
-            <!-- Aba de impressão -->
-            <div>
-                <!-- Rótulo da aba de impressão -->
-                <p></p>
-            </div>
-
-            <!-- Aba de relatório -->
-            <div>
-                <!-- Rótulo da aba de relatório -->
-                <a href=""></a>
+        <div class="forms_container">
+            <!-- Container das abas do sistema -->
+            <div class="tab">
+                <!-- Aba de impressão -->
+                <div class="print">
+                    <!-- Rótulo da aba de impressão -->
+                    <p class="print__label">Impressão</p>
+                </div>
+    
+                <!-- Aba de relatório -->
+                <div class="report">
+                    <!-- Rótulo da aba de relatório -->
+                    <a class="report__label" href="">Relatório</a>
+                </div>
             </div>
 
             <!-- Formulário -->
-            <form action="">
+            <form class="form" action="">
                 <!-- Conjunto de inputs de cliente e responsável -->
-                <div>
+                <div class="input_set">
                     <!-- Input de cliente -->
-                    <div>
+                    <div class="input_container">
                         <!-- Rótulo de cliente -->
-                        <label for=""></label>
+                        <label class="input_container__text" for="cliente">Cliente:</label>
 
                         <!-- Input de cliente -->
-                        <input type="text">
+                        <input class="input_container__input" id="cliente" name="cliente" type="text">
                     </div>
 
                     <!-- Input de responsável -->
-                    <div>
+                    <div class="input_container">
                         <!-- Rótulo de responsável -->
-                        <label for=""></label>
+                        <label class="input_container__text" for="responsavel">Responsável:</label>
 
                         <!-- Input de responsável -->
-                        <input type="text">
+                        <input class="input_container__input" id="responsavel" name="responsavel" type="text">
                     </div>
                 </div>
 
                 <!-- Input de motivo da impressão -->
-                <div>
+                <div class="input_container">
                     <!-- Rótulo de motivo da impressão -->
-                    <label for=""></label>
+                    <label class="input_container__text" for="">Motivo da impressão:</label>
 
                     <!-- Input de motivo da impressão -->
-                    <input type="text">
+                    <select class="input_container__input" id="motivo" name="motivo">
+                        <option class="input__option" value="externo">Externo</option>
+                        <option class="input__option" value="interno">Interno</option>
+                    </select>
                 </div>
 
                 <!-- Conjunto de inputs de quantidade de páginas tanto coloridas quanto preto e branco -->
-                <div>
+                <div class="input_set">
                     <!-- Input de quantidade de páginas coloridas -->
-                    <div>
+                    <div class="input_container">
                         <!-- Rótulo de páginas coloridas -->
-                        <label for=""></label>
+                        <label class="input_container__text" for="">Qtd. Pág. Col.:</label>
 
                         <!-- Input de páginas coloridas -->
-                        <input type="text">
+                        <input class="input_container__input" id="qtd_col" name="qtd_col" type="number" min="0" value="0">
                     </div>
 
                     <!-- Input de quantidade de páginas preto e branco -->
-                    <div>
+                    <div class="input_container">
                         <!-- Rótulo de páginas preto e branco -->
-                        <label for=""></label>
+                        <label class="input_container__text" for="">Qtd. Pág. P/B:</label>
 
                         <!-- Input de páginas preto e branco -->
-                        <input type="text">
+                        <input class="input_container__input" id="qtd_pb" name="qtd_pb" type="number" min="0" value="0">
                     </div>
                 </div>
 
                 <!-- Input de método de pagamento -->
-                <div>
+                <div class="input_container">
                     <!-- Rótulo de método de pagamento -->
-                    <label for=""></label>
+                    <label class="input_container__text" for="">Método de pagamento:</label>
 
                     <!-- Input de método de pagamento -->
-                    <input type="text">
+                    <select class="input_container__input" name="metodo" id="metodo">
+                        <option class="input__option" value="dinheiro">Dinheiro</option>
+                        <option class="input__option" value="pix">Pix</option>
+                    </select>
                 </div>
 
                 <!-- Botão para registrar a impressão -->
-                <button></button>
+                <button class="form__button">Registrar</button>
             </form>
         </div>
 
         <!-- Container avô do valor da impressão -->
-        <div>
+        <div class="value_container_grandfather">
             <!-- Aba de valor da impressão -->
-            <div>
+            <div class="value">
                 <!-- Rótulo da aba de valor da impressão -->
-                <p></p>
+                <p class="value__text">Valor da impressão</p>
             </div>
 
             <!-- Container pai do valor da impressão -->
-            <div>
+            <div class="value_container_father">
                 <!-- Container filho do valor da impressão -->
-                <div>
+                <div class="value_container_son">
                     <!-- Rótulo do valor da impressão -->
-                    <p></p>
+                    <p class="value_container_son__text">R$ <span>99,99</span></p>
                 </div>
             </div>
         </div>
