--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- Aba de relatório -->
                 <div class="report">
                     <!-- Rótulo da aba de relatório -->
-                    <a class="report__label" href="">Relatório</a>
+                    <a class="report__label" href="/html/report.html">Relatório</a>
                 </div>
             </div>
 
